--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       document.getElementById("tootehind").innerHTML = tootehind
        }
      </script>
+     <link rel="stylesheet" href="style.css">
 </head>
      <body>
     
